--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,6 +12,7 @@ body {
   line-height: 1.5;
 
   background-color: #232421cc;
+  text-align: center;
 }
 
 img {
@@ -29,7 +30,7 @@ img {
   position: fixed;
   width: 100%;
   text-align: center;
-  padding: 20px 0;
+  padding: 10px 0;
   background-color: rgb(52, 53, 59);
   box-shadow: 0 10px 15px #14e2e980;
   z-index: 10;
@@ -40,7 +41,7 @@ img {
   outline: none;
   border: none;
   border-radius: 5px;
-  padding: 5px 10px;
+  padding: 2px 10px;
   margin: 5px;
 }
 
@@ -53,15 +54,15 @@ img {
 }
 
 .section {
-  padding: 50px 30px;
+  padding: 50px 10px;
 }
 
 .gallery {
   display: grid;
-  grid-template-columns: repeat(auto-fill, 320px);
-  gap: 30px 30px;
+  grid-template-columns: repeat(auto-fill, 300px);
+  gap: 15px 15px;
   justify-content: center;
-  margin-top: 100px;
+  margin-top: 30px;
 }
 
 .photo-card {
@@ -69,25 +70,30 @@ img {
   border-radius: 5px;
   transition: box-shadow 300 ease-in-out, transform 300 ease-in-out;
 }
+
 .photo-card:hover {
   box-shadow: 0 10px 15px #14e2e980;
   transform: scale(1.01);
 }
+
 .gallery__link {
   text-decoration: none;
   color: #b7d3db;
 }
+
 .gallery__image {
-  width: 100%;
-  height: 280px;
+  height: 150px;
   object-fit: cover;
 }
+
 .info {
   display: flex;
   padding: 10px;
   background-color: #14e2e91a;
 }
+
 .info-item {
+  font-size: 10px;
   margin: 5px;
   text-align: center;
 }
@@ -106,22 +112,21 @@ img {
   overflow: hidden;
 }
 
-.gallery-end__text {
-  display: block;
-  font-size: 30px;
+.gallery__end {
+  font-size: 10px;
   color: #14e2e980;
   text-align: center;
   text-decoration: none;
 
   max-width: 900px;
   margin: 0 auto;
-  margin-top: 100px;
+  margin-top: 30px;
   padding: 15px;
   box-shadow: 0 10px 15px #14e2e980;
   border-radius: 10px;
 }
 
-.gallery-end__text:hover {
+.gallery__end:hover {
   color: #14e2e9;
   box-shadow: 0 15px 15px #14e2e9;
 }
@@ -132,7 +137,6 @@ img {
   height: 100px;
   margin: 0 auto;
   margin-top: 50px;
-  /* display: none; */
 }
 
 .preloader__first,
@@ -185,5 +189,73 @@ img {
   }
   100% {
     transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
+  }
+}
+
+@media (min-width: 768px) {
+  .header {
+    padding: 20px 0;
+  }
+
+  .search-form input,
+  .search-form button {
+    padding: 5px 10px;
+  }
+
+  .section {
+    padding: 80px 10px;
+  }
+
+  .gallery {
+    grid-template-columns: repeat(auto-fill, 320px);
+    gap: 25px 25px;
+    margin-top: 40px;
+  }
+
+  .gallery__image {
+    height: 180px;
+  }
+
+  .info-item {
+    font-size: 14px;
+  }
+
+  .gallery__end {
+    font-size: 24px;
+    margin-top: 50px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .header {
+    padding: 20px 0;
+  }
+
+  .search-form input,
+  .search-form button {
+    padding: 8px 10px;
+  }
+
+  .section {
+    padding: 80px 10px;
+  }
+
+  .gallery {
+    grid-template-columns: repeat(auto-fill, 420px);
+    gap: 30px 30px;
+    margin-top: 40px;
+  }
+
+  .gallery__image {
+    height: 280px;
+  }
+
+  .info-item {
+    font-size: 18px;
+  }
+
+  .gallery__end {
+    font-size: 30px;
+    margin-top: 80px;
   }
 }
